# RagBot

./: .gitignore  readme.md
backend/: .dockerignore  Dockerfile  chroma_store.py  config.py  document_loader.py  inference_client.py  ingestion_pipeline.py  mongo_store.py  new_test.py  pyproject.toml  qdrant_store.py  rag_pipeline.py  server.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/lib/: api.ts  markdown.tsx
frontend/src/pages/: Chat.tsx  Dashboard.tsx
