[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cachetools>=7.1.4",
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "groq>=1.4.0",
    "langchain>=1.2.17",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "ollama>=0.6.2",
    "pymongo>=4.17.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.10.2",
    "python-multipart>=0.0.29",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.4.1",
    "tqdm>=4.67.3",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "mypy>=2.0.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
